atualização da documentação das rotas de Usuário
