# src/app/routes/usuario.routes.ts
@@ -157,6 +157,42 @@ usuarioRoutes.put("/:id", async (request, response) => {
     }
 })
 
+usuarioRoutes.patch("/inativar/:id", async (request, response) => {
+
+    const idUsuario = Number(request.params.id);
+
+    try {
+        await autenticacaoAdmin(request, response, () => {});
+        
+        try {
+            await usuarioController.inativar(idUsuario);
+            response.status(200).json({ message: "Usuário inativado!" })
+        } catch (error) {
+            response.status(400).json(error)
+        }
+    } catch (error) {
+        response.status(401).json(error)
+    }
+})
+
+usuarioRoutes.patch("/ativar/:id", async (request, response) => {
+
+    const idUsuario = Number(request.params.id);
+
+    try {
+        await autenticacaoAdmin(request, response, () => {});
+
+        try {
+            await usuarioController.ativar(idUsuario);
+            response.status(200).json({ message: "Representante ativado!" });
+        } catch (error) {
+            response.status(400).json(error);
+        }
+    } catch (error) {
+        response.status(401).json(error);
+    }
+})
+
 usuarioRoutes.delete("/:id", async (request, response) => {
     
     const idUsuario = Number(request.params.id);
